--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<div class="image avatar"><img src="images/avatar.jpg" alt="" /></div>
+				<div class="image avatar"><img src="images/avatar_original.jpg" alt="" /></div>
 				<div id="main_name">Yong-Han  Lin 林詠涵</div>
 				<div id="self_intro">
-					<div>HCI Researcher | B.S. CS @NYCU</div>
+					<!--<div>HCI Researcher | B.S. CS @NYCU</div>-->
 					<!--<div>Undergraduate Researcher in MUI Lab at NYCU</div>
 					<div>EX-Research Intern in HCD Lab at Polytechnique Montréal</div>
 					<div>EX-Software Engineering Intern at Tech Startup</div>-->
@@ -48,7 +48,7 @@
 					<ul class="actions">
 						<li><a href="#publications" class="button col-4">Publications</a></li>
 						<li><a href="#projects" class="button col-4">Projects</a></li>
-						<li><a href="#extracurricular_activities" class="button col-4">More</a></li>
+						<!--<li><a href="#extracurricular_activities" class="button col-4">More</a></li>-->
 					</ul>
 				</div>
 			</div>
@@ -57,28 +57,28 @@
 
 		<div id="main">
 
-			<!-- Introduction -->
-			<section id="introduction">
+			<!-- About -->
+			<section id="about">
 				<header class="major">
-					<p>Hi, I am currently a Human-Computer Interaction (HCI) researcher located in Taiwan,
-						working with <a href="https://www.armuro.info/" target="_blank">Prof. Yung-Ju Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab,
-						and <a href="http://www.haochuanwang.info/" target="_blank">Prof. Hao-Chuan Wang</a> at the Collaborative and Social Computing (CSC) Lab.
-						I received the degree of B.S. in Computer Science in the summer of 2022 from the National Yang Ming Chiao Tung University (former: National Chiao Tung University) in Taiwan. 
+					<p>Hi, I am currently a Human-Computer Interaction (HCI) research assistant located in Taiwan,
+						working with <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
+						I received the degree of B.S. in Computer Science in the summer of 2022 from the National Yang Ming Chiao Tung University (former: National Chiao Tung University). 
 						I create better systems that support human’s interaction with technology, and design technology that mediates the interaction between individuals.
-						My research interests lie in the fields of <span style="font-weight: 600;color: grey;">Ubiquitous Computing</span>, <span style="font-weight: 600;color: grey;">CSCW and Social Computing</span>. 
-						Recently, I am doing research about human-AI collaboration for notification management on mobile devices and human-chatbot collaboration in the context of peer assessment.
+						My research interests lie in the fields of <span style="font-weight: 600;color: grey;">Human-AI Interaction</span>, <span style="font-weight: 600;color: grey;">Ubiquitous Computing</span>, and
+						<span style="font-weight: 600;color: grey;">Computer-Mediated Communication</span>. 
+						Recently, I am doing research about human-AI collaboration for notification management on mobile devices.
 					</p>
 					<p>
-						In the past, I was a research intern in Human-Centered Design Lab at Polytechnique Montréal in Canada, working with <a href="https://jhcheng.me/" target="_blank">Prof. Jinghui Cheng</a>.
-						I investigated the use of visual artifacts in the issue discussions of open-source software (OSS).
+						In the past, I had two remote research internship experiences, at the Collaborative and Social Computing (CSC) Lab at UC Davis and the Human-Centered Design Lab at Polytechnique Montréal, 
+						working with <a href="http://www.haochuanwang.info/" target="_blank">Dr. Hao-Chuan Wang</a> and <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a> respectively.
 						Also, I was a software engineering intern at Xaduro Inc., a travel tech startup in Taiwan.	 
 					</p>
 					<p>
-						Outside of research, I love to take photos of places I visit, watch movies, and go hiking. 
+						Outside of research, I love to watch movies and play board games. 
 					</p>
 					<p>
 						<span style="font-weight: 600;color: #49BF9D;">Looking for a Ph.D. position starting in Fall 2024! <br>
-						Also, happy to collaborate and connect with any researcher in the world. 😀</span>
+						Happy to collaborate and connect with any researcher in the world. 😀</span>
 					</p>					
 				</header>
 
@@ -94,13 +94,17 @@
 				<h5>(* indicates equal contribution)</h5>
 				<div class="row">
 					<ul>
+						<li><span style="font-weight: 600;color: grey;">Multiple Device Users' Actual and Ideal Cross-Device Usage for Multi-Stage Notification-Interactions: An ESM Study Addressing the Usage Gap and Impacts of Device Context </span> 
+							[In Press] <br>
+						   Fang-Ching Tseng, ​Zih-Yun Chiou, Ho-Hsuan Chuang,  Li-Ting Su, <u>Yong-Han Lin</u>, Yu-Rou Lin, Yi-Chi Lee, Peng-Jui Wang, Uei-Dar Chen, Yung-Ju Chang (CHI '23)
+					   </li>
 						<li><span style="font-weight: 600;color: grey;">Understanding the Characteristics of Visual Contents in Open Source Issue Discussions: A Case Study of Jupyter Notebook </span> 
 							 [<a href="https://dl.acm.org/doi/10.1145/3530019.3534082" target="_blank">ACM Digital Library</a>] 
-							[<a href="https://www.youtube.com/watch?v=iLEwW_DRu3U" target="_blank">Video</a>]<br>
+							[<a href="https://www.youtube.com/watch?v=iLEwW_DRu3U" target="_blank">Video</a>] - presenter<br>
 							Vishakha Agrawal*, <u>Yong-Han Lin</u>*, Jinghui Cheng (EASE '22)
 						</li>
 						<li><span style="font-weight: 600;color: grey;">A Notification Management System for: Sorting and Classifying Smartphone’s Notifications </span>
-							 [<a href="files/TAICHI_2021_Poster_file_59.pdf" target="_blank">link</a>]<br>
+							 [<a href="files/TAICHI_2021_Poster_file_59.pdf" target="_blank">link</a>] - project lead<br>
 							<u>Yong-Han Lin</u>*, Yin-Hsuan Liao*, Chia-Yu Huang*, Yu-Wei Yang, Hsin-Chien Tung, Chieh Hsu, Yung-Ju Chang (TAICHI '21)
 						</li>
 
@@ -126,12 +130,12 @@
 					<article class="col-6 col-12-xsmall">
 						<a href="https://traiwan.com/" class="image fit thumb" target="_blank"><img src="images/projects/traiwan.jpg" alt="" /></a>
 						<h3>Traiwan</h3>
-						<p>Traiwan is a website for searching and booking hotels in taiwan. It is created by me with the development team of Xaduro Inc. while in my software engineering internship.</p>
+						<p>Traiwan is a website for searching and booking hotels in taiwan. It is created with the development team of Xaduro Inc. while in my software engineering internship.</p>
 					</article>
 					<article class="col-6 col-12-xsmall">
 						<a href="https://www.figma.com/proto/l7f3Y0dYCnRJ8XKyzbHUEt/%E6%B4%BB%E5%8B%95%E5%90%A7?page-id=1157%3A0&node-id=1173%3A691&viewport=241%2C48%2C0.03&scaling=min-zoom&starting-point-node-id=1168%3A173" target="_blank" class="image fit thumb"><img src="images/projects/NCTU+.png" alt="" /></a>
 						<h3>NCTU+ User Experience and Evaluate</h3>
-						<p><a href="https://plus.nctu.edu.tw/">NCTU+</a> is an intelligent campus system used by 10k+ students. In this project, I worked as an UX researcher to evaluate and re-design the event platform in NCTU+.</p>
+						<p>NCTU+ is an intelligent campus system used by 10k+ students. In this project, I worked as an UX researcher to evaluate and re-design the event platform in NCTU+.</p>
 					</article>
 					<article class="col-6 col-12-xsmall">
 						<a href="https://drive.google.com/file/d/1zoUeNlg9u3wc0eYaPRTDwaX34Mhe9151/view?usp=sharing" class="image fit thumb" target="_blank"><img src="images/projects/Good Finance.jpg" alt="" /></a>
@@ -151,7 +155,7 @@
 				</div>
 			</section>
 
-			<section id="extracurricular_activities">
+			<!--<section id="extracurricular_activities">
 				<h2>More</h2>
 				<div class="row">
 					<article class="col-6 col-12-xsmall">
@@ -175,14 +179,14 @@
 						<p>We used board games to stimulate children's interest in programming! I was a team leader in NCTU in the year of 2019.</p>
 					</article>
 				</div>
-			</section>
+			</section>-->
 		</div>
 
 		<!-- Footer -->
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; 2022 Yong-Han Lin</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+					<li>&copy; 2023 Yong-Han Lin. Last updated: March, 2023.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</footer>
