--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Yong-Han Lin</title>
+		<title>Yong-Han Lin | Human-Computer Interaction</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta property="og:title" content="Yong-Han Lin" />
+		<meta property="og:title" content="Yong-Han Lin | Human-Computer Interaction" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://scod0401.github.io/" />
-		<meta property="og:image" content="images/share.jpg" />
+		<meta property="og:image" content="images/avatar.jpg" />
 		<meta property="og:description" content="Yong-Han Lin's personal website" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets\css\academicons-1.9.2\css/academicons.min.css">
