--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Yong-Han Lin | Human-Computer Interaction</title>
+		<link rel="icon" type="image/x-icon" href="images/logo.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta property="og:title" content="Yong-Han Lin | Human-Computer Interaction" />
