--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
 						<li><a title="CV" href="https://drive.google.com/file/d/1N2OrsjjaVLIfdZkQMEre37VMw4j-4es4/view?usp=sharing" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
 					</ul>
 					<ul class="actions">
+						<li><a href="#updates" class="button col-4">Updates</a></li>
 						<li><a href="#publications" class="button col-4">Publications</a></li>
-						<li><a href="#projects" class="button col-4">Projects</a></li>
+						<!--<li><a href="#projects" class="button col-4">Projects</a></li>-->
 						<!--<li><a href="#extracurricular_activities" class="button col-4">More</a></li>-->
 					</ul>
 				</div>
@@ -57,12 +58,11 @@
 
 
 		<div id="main">
-
 			<!-- About -->
 			<section id="about">
 				<header class="major">
 					<p>Hi, I am currently a Human-Computer Interaction (HCI) research assistant located in Taiwan,
-						working with <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
+						working with <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju(Stanley) Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
 						I received the degree of B.S. in Computer Science in the summer of 2022 from the National Yang Ming Chiao Tung University (former: National Chiao Tung University). 
 						I create better systems that support human’s interaction with technology, and design technology that mediates the interaction between individuals.
 						My research interests lie in the fields of <span style="font-weight: 600;color: grey;">Human-AI Interaction</span>, <span style="font-weight: 600;color: grey;">Ubiquitous Computing</span>, and
@@ -87,6 +87,53 @@
 				<!--<ul class="actions">
 					<li><a href="#">Check my resume to learn more!</a></li>
 				</ul>-->
+			</section>
+
+			<!-- Updates -->
+			<section id="updates">
+				<h2>Updates</h2>
+				<div class="row">
+					<table class="table">
+						<tbody>
+							<tr>
+								<th scope="row">Jan, <br>2023</th>
+								<td>
+									Paper accepted to <a href="https://chi2023.acm.org/" target="_blank">CHI 2023</a>! Congrats and many thanks to my collaborators! 
+								</td>
+							</tr>
+							<tr>
+								<th scope="row">Nov, <br>2022</th>
+								<td>
+									Student volunteer in <a href="https://cscw.acm.org/2022/" target="_blank">CSCW 2022</a>. Thanks for having me.
+								</td>
+							</tr>
+							<tr>
+								<th scope="row">Jun, <br>2022</th>
+								<td>
+									Started a remote summer internship with Dr. Hao-Chuan Wang and Dr. Yi-Chieh Lee at UC Davis Collaborative and Social Computing (CSC) Lab.
+								</td>
+							</tr>
+							<tr>
+								<th scope="row">Jun, <br>2022</th>
+								<td>
+									Graduated from NYCU with a BS degree in Computer Science.
+								</td>
+							</tr>
+							<tr>
+								<th scope="row">Jun, <br>2022</th>
+								<td>
+									Presented in EASE 2022, here is the <a href="https://www.youtube.com/watch?v=iLEwW_DRu3U" target="_blank">video</a> and <a href="https://dl.acm.org/doi/10.1145/3530019.3534082" target="_blank">paper</a>.
+								</td>
+							</tr>
+							<tr>
+								<th scope="row">May, <br>2022</th>
+								<td>
+									Paper accepted to <a href="https://conf.researchr.org/home/ease-2022" target="_blank">EASE 2022</a>! Congrats and many thanks to my collaborators!
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</section>
 
 			<!-- Publications -->
@@ -125,7 +172,7 @@
 			</section>
 
 			<!-- Projects -->
-			<section id="projects">
+			<!--<section id="projects">
 				<h2>Projects</h2>
 				<div class="row">
 					<article class="col-6 col-12-xsmall">
@@ -148,13 +195,13 @@
 						<h3>Travel In Taiwan</h3>
 						<p>Travel In Taiwan is a travel website that helps people find places to travel in Taiwan by selecting their preferences. I designed and build the frontend and backend of this website.</p>
 					</article>
-					<!--<article class="col-6 col-12-xsmall">
+					<article class="col-6 col-12-xsmall">
 						<a href="https://drive.google.com/file/d/1XYxPBZgzR5Vly4gqr_NNPHSWTv46dJIH/view?usp=sharing" target="_blank" class="image fit thumb"><img src="images/projects/Stray_Rescue.png" alt="" /></a>
 						<h3>Stray Rescue</h3>
 						<p>Stray Rescue is a 100 seconds animation that encouraged people to rescue stray dogs.</p>
-					</article>-->
+					</article>
 				</div>
-			</section>
+			</section>-->
 
 			<!--<section id="extracurricular_activities">
 				<h2>More</h2>
@@ -181,7 +228,10 @@
 					</article>
 				</div>
 			</section>-->
+
+			
 		</div>
+		
 
 		<!-- Footer -->
 		<footer id="footer">
