--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<li><a title="Twitter" href="https://twitter.com/yoonghaan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
 						<li><a title="Email" href="mailto:alberta.cs07@nycu.edu.tw" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a title="CV" href="https://drive.google.com/file/d/1N2OrsjjaVLIfdZkQMEre37VMw4j-4es4/view?usp=sharing" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
+						<li><a title="CV" href="https://drive.google.com/file/d/1aa2c_XnYF-DGAyjIpD2wEWZuznh0Li1V/view?usp=sharing" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
 					</ul>
 					<ul class="actions">
 						<li><a href="#updates" class="button col-4">Updates</a></li>
@@ -63,12 +63,12 @@
 			<section id="about">
 				<header class="major">
 					<p>Hi, I am currently a Human-Computer Interaction (HCI) research assistant located in Taiwan,
-						working with <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju(Stanley) Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
+						working with <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
 						I received the degree of B.S. in Computer Science in the summer of 2022 from the National Yang Ming Chiao Tung University (former: National Chiao Tung University). 
-						I create better systems that support human’s interaction with technology, and design technology that mediates the interaction between individuals.
-						My research interests lie in the fields of <span style="font-weight: 600;color: grey;">Human-AI Interaction</span>, <span style="font-weight: 600;color: grey;">Ubiquitous Computing</span>, and
-						<span style="font-weight: 600;color: grey;">Computer-Mediated Communication</span>. 
-						Recently, I am doing research about human-AI collaboration for notification management on mobile devices.
+						I create interactive systems that provide AI-powered assistance and additional manual features, supporting humans for a better experience, and study how users perceive and interact with the system.
+						My research interests lie in the fields of <span style="font-weight: 600;color: grey;">Human-Computer Interaction</span>, <span style="font-weight: 600;color: grey;">Ubiquitous Computing</span>, and
+						<span style="font-weight: 600;color: grey;">Human-AI collaboration</span>. 
+						Recently, I am conducting research about features that support notification management on mobile devices.
 					</p>
 					<p>
 						In the past, I had two remote research internship experiences, at the Collaborative and Social Computing (CSC) Lab at UC Davis and the Human-Centered Design Lab at Polytechnique Montréal, 
@@ -76,7 +76,7 @@
 						Also, I was a software engineering intern at Xaduro Inc., a travel tech startup in Taiwan.	 
 					</p>
 					<p>
-						Outside of research, I love to watch movies and play board games. 
+						Outside of research, I love to watch movies (especially Marvel series) and play board games (Avalon). 
 					</p>
 					<p>
 						<span style="font-weight: 600;color: #49BF9D;">Looking for a Ph.D. position starting in Fall 2024! <br>
@@ -96,6 +96,18 @@
 				<div class="row">
 					<table class="table">
 						<tbody>
+							<tr>
+								<th scope="row">June, <br>2023</th>
+								<td>
+									Poster accepted to <a href="https://www.ubicomp.org/ubicomp-iswc-2023/" target="_blank">UbiComp/ISWC 2023</a>! Going to present it in person, looking forward to attending the conference!
+								</td>
+							</tr>
+							<tr>
+								<th scope="row">April, <br>2023</th>
+								<td>
+									Student volunteer in <a href="https://chi2023.acm.org/" target="_blank">CHI 2023</a>. My first in-person conference, having so much fun! Thanks for having me at the last minute!
+								</td>
+							</tr>
 							<tr>
 								<th scope="row">Jan, <br>2023</th>
 								<td>
@@ -143,13 +155,17 @@
 				<h5>(* indicates equal contribution)</h5>
 				<div class="row">
 					<ul>
+						<li><span style="font-weight: 600;color: grey;">Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management </span> 
+							[<a href="files/NotiManager_UbiComp_2023.pdf" target="_blank"></a>]  - project lead<br>
+							<u>Yong-Han Lin</u>,  Li-Ting Su, Uei-Dar Chen, Peng-Jui Wang, Yi-Chi Lee, Yung-Ju Chang (UbiComp/ISWC '23)
+					   </li>
 						<li><span style="font-weight: 600;color: grey;">Multiple Device Users' Actual and Ideal Cross-Device Usage for Multi-Stage Notification-Interactions: An ESM Study Addressing the Usage Gap and Impacts of Device Context </span> 
-							[In Press] <br>
+							[<a href="https://dl.acm.org/doi/abs/10.1145/3544548.3580731" target="_blank">ACM Digital Library</a>]  - collaborator<br>
 						   Fang-Ching Tseng, ​Zih-Yun Chiou, Ho-Hsuan Chuang,  Li-Ting Su, <u>Yong-Han Lin</u>, Yu-Rou Lin, Yi-Chi Lee, Peng-Jui Wang, Uei-Dar Chen, Yung-Ju Chang (CHI '23)
 					   </li>
 						<li><span style="font-weight: 600;color: grey;">Understanding the Characteristics of Visual Contents in Open Source Issue Discussions: A Case Study of Jupyter Notebook </span> 
 							 [<a href="https://dl.acm.org/doi/10.1145/3530019.3534082" target="_blank">ACM Digital Library</a>] 
-							[<a href="https://www.youtube.com/watch?v=iLEwW_DRu3U" target="_blank">Video</a>] - presenter<br>
+							[<a href="https://www.youtube.com/watch?v=iLEwW_DRu3U" target="_blank">Video</a>] - co-first author & presenter<br>
 							Vishakha Agrawal*, <u>Yong-Han Lin</u>*, Jinghui Cheng (EASE '22)
 						</li>
 						<li><span style="font-weight: 600;color: grey;">A Notification Management System for: Sorting and Classifying Smartphone’s Notifications </span>
@@ -241,7 +257,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; 2023 Yong-Han Lin. Last updated: March, 2023.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+					<li>&copy; 2023 Yong-Han Lin. Last updated: Oct., 2023.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</footer>
