--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 				<div class="row">
 					<ul>
 						<li><span style="font-weight: 600;color: grey;">Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management </span> 
-							[<a href="files/NotiManager_UbiComp_2023.pdf" target="_blank"></a>]  - project lead<br>
+							[<a href="files/NotiManager_UbiComp_2023.pdf" target="_blank">link</a>]  - project lead<br>
 							<u>Yong-Han Lin</u>,  Li-Ting Su, Uei-Dar Chen, Peng-Jui Wang, Yi-Chi Lee, Yung-Ju Chang (UbiComp/ISWC '23)
 					   </li>
 						<li><span style="font-weight: 600;color: grey;">Multiple Device Users' Actual and Ideal Cross-Device Usage for Multi-Stage Notification-Interactions: An ESM Study Addressing the Usage Gap and Impacts of Device Context </span> 
