--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<header id="header">
 			<div class="inner">
 				<div class="image avatar"><img src="images/avatar_original.jpg" alt="" /></div>
-				<div id="main_name">Yong-Han  Lin 林詠涵</div>
+				<div id="main_name">Yong-Han (Johanne) Lin</div>
 				<div id="self_intro">
 					<!--<div>HCI Researcher | B.S. CS @NYCU</div>-->
 					<!--<div>Undergraduate Researcher in MUI Lab at NYCU</div>
@@ -62,21 +62,21 @@
 			<!-- About -->
 			<section id="about">
 				<header class="major">
-					<p>Hi, I am currently a Human-Computer Interaction (HCI) research assistant located in Taiwan,
+					<p>Hi, I am Yong-Han Lin, you can call me Johanne or in Chinese: 林詠涵. I am currently a Human-Computer Interaction (HCI) research assistant located in Taiwan,
 						working with <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
 						I received the degree of B.S. in Computer Science in the summer of 2022 from the National Yang Ming Chiao Tung University (former: National Chiao Tung University). 
-						I create interactive systems that provide AI-powered assistance and additional manual features, supporting humans for a better experience, and study how users perceive and interact with the system.
+						I create interactive systems that provide AI-powered assistance and additional manual features, assisting people in effectively accomplishing tasks.
 						My research interests lie in the fields of <span style="font-weight: 600;color: grey;">Human-Computer Interaction</span>, <span style="font-weight: 600;color: grey;">Ubiquitous Computing</span>, and
 						<span style="font-weight: 600;color: grey;">Human-AI collaboration</span>. 
 						Recently, I am conducting research about features that support notification management on mobile devices.
 					</p>
 					<p>
-						In the past, I had two remote research internship experiences, at the Collaborative and Social Computing (CSC) Lab at UC Davis and the Human-Centered Design Lab at Polytechnique Montréal, 
-						working with <a href="http://www.haochuanwang.info/" target="_blank">Dr. Hao-Chuan Wang</a> and <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a> respectively.
+						In the past, I had two remote research internship experiences, at the Collaborative and Social Computing (CSC) Lab at UC Davis led by <a href="http://www.haochuanwang.info/" target="_blank">Dr. Hao-Chuan Wang</a> 
+						and the Human-Centered Design Lab at Polytechnique Montréal led by <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a>.
 						Also, I was a software engineering intern at Xaduro Inc., a travel tech startup in Taiwan.	 
 					</p>
 					<p>
-						Outside of research, I love to watch movies (especially Marvel series) and play board games (Avalon). 
+						Outside of research, I love to watch movies (especially Marvel series) and play board games (Avalon is my favorite). 
 					</p>
 					<p>
 						<span style="font-weight: 600;color: #49BF9D;">Looking for a Ph.D. position starting in Fall 2024! <br>
@@ -105,7 +105,7 @@
 							<tr>
 								<th scope="row">April, <br>2023</th>
 								<td>
-									Student volunteer in <a href="https://chi2023.acm.org/" target="_blank">CHI 2023</a>. My first in-person conference, having so much fun! Thanks for having me at the last minute!
+									Student volunteer in <a href="https://chi2023.acm.org/" target="_blank">CHI 2023</a>. My first in-person conference and I had so much fun! Thanks for having me at the last minute!
 								</td>
 							</tr>
 							<tr>
