push regular version

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<div class="image avatar"><img src="images/avatar_original.jpg" alt="" /></div>
+				<div class="image avatar"><img src="images/old_avatar.jpg" alt="" /></div>
 				<div id="main_name">Yong-Han (Johanne) Lin</div>
 				<div id="self_intro">
 					<!--<div>HCI Researcher | B.S. CS @NYCU</div>-->
@@ -65,14 +65,19 @@
 					<p>Hi, I am Yong-Han Lin, you can call me Johanne or in Chinese: 林詠涵. I am currently a Human-Computer Interaction (HCI) research assistant located in Taiwan,
 						working with <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
 						I received the degree of B.S. in Computer Science in the summer of 2022 from the National Yang Ming Chiao Tung University (former: National Chiao Tung University). 
-						I create interactive systems that provide AI-powered assistance and additional manual features, assisting people in effectively accomplishing tasks.
+						I want to study and create interactive systems that empower people to complete tasks easier, meet customized user requirements, and guide personal behavior 
+						towards more favorable outcomes. 
 						My research interests lie in the fields of <span style="font-weight: 600;color: grey;">Human-Computer Interaction</span>, <span style="font-weight: 600;color: grey;">Ubiquitous Computing</span>, and
 						<span style="font-weight: 600;color: grey;">Human-AI collaboration</span>. 
 						Recently, I am conducting research about features that support notification management on mobile devices.
 					</p>
-					<p>
+					<!--<p>
 						In the past, I had two remote research internship experiences, at the Collaborative and Social Computing (CSC) Lab at UC Davis led by <a href="http://www.haochuanwang.info/" target="_blank">Dr. Hao-Chuan Wang</a> 
 						and the Human-Centered Design Lab at Polytechnique Montréal led by <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a>.
+						Also, I was a software engineering intern at Xaduro Inc., a travel tech startup in Taiwan.	 
+					</p>-->
+					<p>
+						In the past, I had a remote research internship experience, at the Human-Centered Design Lab at Polytechnique Montréal led by <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a>.
 						Also, I was a software engineering intern at Xaduro Inc., a travel tech startup in Taiwan.	 
 					</p>
 					<p>
@@ -120,12 +125,12 @@
 									Student volunteer in <a href="https://cscw.acm.org/2022/" target="_blank">CSCW 2022</a>. Thanks for having me.
 								</td>
 							</tr>
-							<tr>
+							<!--<tr>
 								<th scope="row">Jun, <br>2022</th>
 								<td>
 									Started a remote summer internship with Dr. Hao-Chuan Wang and Dr. Yi-Chieh Lee at UC Davis Collaborative and Social Computing (CSC) Lab.
 								</td>
-							</tr>
+							</tr>-->
 							<tr>
 								<th scope="row">Jun, <br>2022</th>
 								<td>
