--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
 					<p>Hi, I am Yong-Han Lin, you can call me Johanne or in Chinese: 林詠涵. I am currently a Human-Computer Interaction (HCI) research assistant located in Taiwan,
 						working with <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
 						I received the degree of B.S. in Computer Science in the summer of 2022 from the National Yang Ming Chiao Tung University (former: National Chiao Tung University). 
-						I want to study and create interactive systems that empower people to complete tasks easier, meet customized user requirements, and guide personal behavior 
-						towards more favorable outcomes. 
-						My research interests lie in the fields of <span style="font-weight: 600;color: grey;">Human-Computer Interaction</span>, <span style="font-weight: 600;color: grey;">Ubiquitous Computing</span>, and
-						<span style="font-weight: 600;color: grey;">Human-AI collaboration</span>. 
-						Recently, I am conducting research about features that support notification management on mobile devices.
+						I want to study and create hybrid (human + machine intelligence) systems that empower people to complete tasks easier and flexibly meet customized user requirements. 
+						As a HCI researcher, my mission is to understand user needs and assist in conveying them to computer systems.
+						Recently, I am conducting research to understand the usages and experiences of notification management functionalities on mobile devices, as well as users' preferences for manual, automatic, or hybrid approaches.
+						My research interests lie in the fields of <span style="font-weight: 600;color: #035772;">Human-Computer Interaction</span>, <span style="font-weight: 600;color: #035772;">Ubiquitous Computing</span>, and
+						<span style="font-weight: 600;color: #035772;">Human-AI collaboration</span>. 
+						
 					</p>
 					<!--<p>
 						In the past, I had two remote research internship experiences, at the Collaborative and Social Computing (CSC) Lab at UC Davis led by <a href="http://www.haochuanwang.info/" target="_blank">Dr. Hao-Chuan Wang</a> 
@@ -81,10 +82,10 @@
 						Also, I was a software engineering intern at Xaduro Inc., a travel tech startup in Taiwan.	 
 					</p>
 					<p>
-						Outside of research, I love to watch movies (especially Marvel series) and play board games (Avalon is my favorite). 
+						Outside of research, I love to watch movies and play board games (Avalon is my favorite). 
 					</p>
 					<p>
-						<span style="font-weight: 600;color: #49BF9D;">Looking for a Ph.D. position starting in Fall 2024! <br>
+						<span style="font-weight: 600;color: #035772;">Looking for a Ph.D. position starting in Fall 2024! <br>
 						Happy to collaborate and connect with any researcher in the world. 😀</span>
 					</p>					
 				</header>
@@ -160,20 +161,20 @@
 				<h5>(* indicates equal contribution)</h5>
 				<div class="row">
 					<ul>
-						<li><span style="font-weight: 600;color: grey;">Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management </span> 
-							[<a href="files/NotiManager_UbiComp_2023.pdf" target="_blank">link</a>]  - project lead<br>
+						<li><span style="font-weight: 600;color: #035772;">Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management </span> 
+							[<a href="https://dl.acm.org/doi/abs/10.1145/3594739.3610699" target="_blank">ACM Digital Library</a>]  - project lead<br>
 							<u>Yong-Han Lin</u>,  Li-Ting Su, Uei-Dar Chen, Peng-Jui Wang, Yi-Chi Lee, Yung-Ju Chang (UbiComp/ISWC '23)
 					   </li>
-						<li><span style="font-weight: 600;color: grey;">Multiple Device Users' Actual and Ideal Cross-Device Usage for Multi-Stage Notification-Interactions: An ESM Study Addressing the Usage Gap and Impacts of Device Context </span> 
+						<li><span style="font-weight: 600;color: #035772;">Multiple Device Users' Actual and Ideal Cross-Device Usage for Multi-Stage Notification-Interactions: An ESM Study Addressing the Usage Gap and Impacts of Device Context </span> 
 							[<a href="https://dl.acm.org/doi/abs/10.1145/3544548.3580731" target="_blank">ACM Digital Library</a>]  - collaborator<br>
 						   Fang-Ching Tseng, ​Zih-Yun Chiou, Ho-Hsuan Chuang,  Li-Ting Su, <u>Yong-Han Lin</u>, Yu-Rou Lin, Yi-Chi Lee, Peng-Jui Wang, Uei-Dar Chen, Yung-Ju Chang (CHI '23)
 					   </li>
-						<li><span style="font-weight: 600;color: grey;">Understanding the Characteristics of Visual Contents in Open Source Issue Discussions: A Case Study of Jupyter Notebook </span> 
+						<li><span style="font-weight: 600;color: #035772;">Understanding the Characteristics of Visual Contents in Open Source Issue Discussions: A Case Study of Jupyter Notebook </span> 
 							 [<a href="https://dl.acm.org/doi/10.1145/3530019.3534082" target="_blank">ACM Digital Library</a>] 
 							[<a href="https://www.youtube.com/watch?v=iLEwW_DRu3U" target="_blank">Video</a>] - co-first author & presenter<br>
 							Vishakha Agrawal*, <u>Yong-Han Lin</u>*, Jinghui Cheng (EASE '22)
 						</li>
-						<li><span style="font-weight: 600;color: grey;">A Notification Management System for: Sorting and Classifying Smartphone’s Notifications </span>
+						<li><span style="font-weight: 600;color: #035772;">A Notification Management System for: Sorting and Classifying Smartphone’s Notifications </span>
 							 [<a href="files/TAICHI_2021_Poster_file_59.pdf" target="_blank">link</a>] - project lead<br>
 							<u>Yong-Han Lin</u>*, Yin-Hsuan Liao*, Chia-Yu Huang*, Yu-Wei Yang, Hsin-Chien Tung, Chieh Hsu, Yung-Ju Chang (TAICHI '21)
 						</li>
@@ -262,7 +263,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; 2023 Yong-Han Lin. Last updated: Oct., 2023.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+					<li>&copy; 2023 Yong-Han Lin. Last updated: Nov., 2023.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</footer>
