--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<p>Hi, I am Yong-Han Lin, you can call me Johanne or in Chinese: 林詠涵. I am currently a Human-Computer Interaction (HCI) research assistant located in Taiwan,
 						working with <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
 						I received the degree of B.S. in Computer Science in the summer of 2022 from the National Yang Ming Chiao Tung University (former: National Chiao Tung University). 
-						I want to study and create hybrid (human + machine intelligence) systems that empower people to complete tasks easier and flexibly meet customized user requirements. 
+						I want to study and create hybrid (human + machine intelligence) systems that empower people to complete tasks easier and are flexible enough to meet customized user requirements. 
 						As a HCI researcher, my mission is to understand user needs and assist in conveying them to computer systems.
 						Recently, I am conducting research to understand the usages and experiences of notification management functionalities on mobile devices, as well as users' preferences for manual, automatic, or hybrid approaches.
 						My research interests lie in the fields of <span style="font-weight: 600;color: #035772;">Human-Computer Interaction</span>, <span style="font-weight: 600;color: #035772;">Ubiquitous Computing</span>, and
