--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<header id="header">
 			<div class="inner">
 				<div class="image avatar"><img src="images/old_avatar.jpg" alt="" /></div>
-				<div id="main_name">Yong-Han (Johanne) Lin</div>
+				<div id="main_name">Yong-Han Lin</div>
 				<div id="self_intro">
 					<!--<div>HCI Researcher | B.S. CS @NYCU</div>-->
 					<!--<div>Undergraduate Researcher in MUI Lab at NYCU</div>
@@ -62,25 +62,27 @@
 			<!-- About -->
 			<section id="about">
 				<header class="major">
+		
 					<p>Hi, I am Yong-Han Lin, you can call me Johanne or in Chinese: 林詠涵. I am currently a Human-Computer Interaction (HCI) research assistant located in Taiwan,
 						working with <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
 						I received the degree of B.S. in Computer Science in the summer of 2022 from the National Yang Ming Chiao Tung University (former: National Chiao Tung University). 
-						I want to study and create hybrid (human + machine intelligence) systems that empower people to complete tasks easier and are flexible enough to meet customized user requirements. 
-						As a HCI researcher, my mission is to understand user needs and assist in conveying them to computer systems.
+						I am interested in investigating the problems mobile device users' face and create hybrid (human + machine intelligence) applications on mobile devices to solve their problems and 
+						for improving well-being. 
+						As a HCI researcher, my mission is to understand people's needs and assist in conveying them to computer systems.
 						Recently, I am conducting research to understand the usages and experiences of notification management functionalities on mobile devices, as well as users' preferences for manual, automatic, or hybrid approaches.
-						My research interests lie in the fields of <span style="font-weight: 600;color: #035772;">Human-Computer Interaction</span>, <span style="font-weight: 600;color: #035772;">Ubiquitous Computing</span>, and
-						<span style="font-weight: 600;color: #035772;">Human-AI collaboration</span>. 
+						My research interests lie in the fields of <span style="font-weight: 600;color: #035772;">Human-Computer Interaction</span> and <span style="font-weight: 600;color: #035772;">Ubiquitous Computing</span>.
 						
 					</p>
-					<!--<p>
-						In the past, I had two remote research internship experiences, at the Collaborative and Social Computing (CSC) Lab at UC Davis led by <a href="http://www.haochuanwang.info/" target="_blank">Dr. Hao-Chuan Wang</a> 
-						and the Human-Centered Design Lab at Polytechnique Montréal led by <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a>.
-						Also, I was a software engineering intern at Xaduro Inc., a travel tech startup in Taiwan.	 
-					</p>-->
 					<p>
-						In the past, I had a remote research internship experience, at the Human-Centered Design Lab at Polytechnique Montréal led by <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a>.
+						In the past, I had two remote research internship experiences. One was at the UC Davis Collaborative and Social Computing (CSC) Lab, where I worked with <a href="http://www.haochuanwang.info/" target="_blank">Dr. Hao-Chuan Wang</a> 
+						and <a href="https://www.yclee.net/" target="_blank">Dr. Yi-Chieh (EJ) Lee</a>. 
+						The other was at the Polytechnique Montréal Human-Centered Design (HCD) Lab, where I worked with <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a>.
 						Also, I was a software engineering intern at Xaduro Inc., a travel tech startup in Taiwan.	 
 					</p>
+					<!--<p>
+						In the past, I had a remote research internship experience, at the Human-Centered Design Lab at Polytechnique Montréal led by <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a>.
+						Also, I was a software engineering intern at Xaduro Inc., a travel tech startup in Taiwan.	 
+					</p>-->
 					<p>
 						Outside of research, I love to watch movies and play board games (Avalon is my favorite). 
 					</p>
@@ -103,27 +105,33 @@
 					<table class="table">
 						<tbody>
 							<tr>
+								<th scope="row">Oct., <br>2023</th>
+								<td>
+									Presented <a href="https://dl.acm.org/doi/abs/10.1145/3594739.3610699" target="_blank">"Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management"</a> at UbiComp/ISWC 2023</a> in Cacun, Mexico.  
+								</td>
+							</tr>
+							<tr>
 								<th scope="row">June, <br>2023</th>
 								<td>
-									Poster accepted to <a href="https://www.ubicomp.org/ubicomp-iswc-2023/" target="_blank">UbiComp/ISWC 2023</a>! Going to present it in person, looking forward to attending the conference!
+									Poster about users' perception of automatic, manual, hybrid notification management features is accepted to <a href="https://www.ubicomp.org/ubicomp-iswc-2023/" target="_blank">UbiComp/ISWC 2023</a>! Going to present it in person!
 								</td>
 							</tr>
 							<tr>
 								<th scope="row">April, <br>2023</th>
 								<td>
-									Student volunteer in <a href="https://chi2023.acm.org/" target="_blank">CHI 2023</a>. My first in-person conference and I had so much fun! Thanks for having me at the last minute!
+									Student volunteer at <a href="https://chi2023.acm.org/" target="_blank">CHI 2023</a>. My first in-person conference and I had so much fun! Thanks for having me at the last minute!
 								</td>
 							</tr>
 							<tr>
-								<th scope="row">Jan, <br>2023</th>
+								<th scope="row">Jan., <br>2023</th>
 								<td>
-									Paper accepted to <a href="https://chi2023.acm.org/" target="_blank">CHI 2023</a>! Congrats and many thanks to my collaborators! 
+									Paper "Multiple Device Users’ Actual and Ideal Cross-Device Usage for Multi-Stage Notification-Interactions" is accepted to <a href="https://chi2023.acm.org/" target="_blank">CHI 2023</a>! Congrats and many thanks to my collaborators! 
 								</td>
 							</tr>
 							<tr>
-								<th scope="row">Nov, <br>2022</th>
+								<th scope="row">Nov., <br>2022</th>
 								<td>
-									Student volunteer in <a href="https://cscw.acm.org/2022/" target="_blank">CSCW 2022</a>. Thanks for having me.
+									Student volunteer at <a href="https://cscw.acm.org/2022/" target="_blank">CSCW 2022</a>. Thanks for having me.
 								</td>
 							</tr>
 							<!--<tr>
@@ -133,21 +141,21 @@
 								</td>
 							</tr>-->
 							<tr>
-								<th scope="row">Jun, <br>2022</th>
+								<th scope="row">June, <br>2022</th>
 								<td>
 									Graduated from NYCU with a BS degree in Computer Science.
 								</td>
 							</tr>
 							<tr>
-								<th scope="row">Jun, <br>2022</th>
+								<th scope="row">June, <br>2022</th>
 								<td>
-									Presented in EASE 2022, here is the <a href="https://www.youtube.com/watch?v=iLEwW_DRu3U" target="_blank">video</a> and <a href="https://dl.acm.org/doi/10.1145/3530019.3534082" target="_blank">paper</a>.
+									Presented remotely at EASE 2022, here is the <a href="https://www.youtube.com/watch?v=iLEwW_DRu3U" target="_blank">video</a> and <a href="https://dl.acm.org/doi/10.1145/3530019.3534082" target="_blank">paper</a>.
 								</td>
 							</tr>
 							<tr>
 								<th scope="row">May, <br>2022</th>
 								<td>
-									Paper accepted to <a href="https://conf.researchr.org/home/ease-2022" target="_blank">EASE 2022</a>! Congrats and many thanks to my collaborators!
+									Paper "Understanding the Characteristics of Visual Contents in Open Source Issue Discussions" is accepted to <a href="https://conf.researchr.org/home/ease-2022" target="_blank">EASE 2022</a>! Congrats and many thanks to my collaborators!
 								</td>
 							</tr>
 						</tbody>
